--- a/styles/styles.css
+++ b/styles/styles.css
@@ -62,7 +62,8 @@
   --section-desktop-padding: 96px;
 }
 
-@media (width >= 900px) {
+
+@media (width >=900px) {
   :root {
     --heading-font-size-xxl: 60px;
     --heading-font-size-xl: 48px;
@@ -99,32 +100,32 @@ h6 {
   font-weight: 300;
   line-height: 1.25;
   margin-top: 1em;
-  margin-bottom: 0.5em;
+  margin-bottom: .5em;
   scroll-margin: calc(var(--nav-height) + 1em);
 }
 
 h1 {
-  font-size: var(--heading-font-size-xxl);
+  font-size: var(--heading-font-size-xxl)
 }
 
 h2 {
-  font-size: var(--heading-font-size-xl);
+  font-size: var(--heading-font-size-xl)
 }
 
 h3 {
-  font-size: var(--heading-font-size-l);
+  font-size: var(--heading-font-size-l)
 }
 
 h4 {
-  font-size: var(--heading-font-size-m);
+  font-size: var(--heading-font-size-m)
 }
 
 h5 {
-  font-size: var(--heading-font-size-s);
+  font-size: var(--heading-font-size-s)
 }
 
 h6 {
-  font-size: var(--heading-font-size-xs);
+  font-size: var(--heading-font-size-xs)
 }
 
 p,
@@ -143,7 +144,7 @@ pre {
 }
 
 code {
-  padding: 0.125em;
+  padding: .125em;
 }
 
 pre {
@@ -153,7 +154,7 @@ pre {
 main pre {
   background-color: var(--light-color);
   padding: 1em;
-  border-radius: 0.25em;
+  border-radius: .25em;
   overflow-x: auto;
   white-space: pre;
 }
@@ -199,12 +200,12 @@ button {
 
 button,
 input {
-  overflow: visible;
+  overflow: visible
 }
 
 button,
 select {
-  text-transform: none;
+  text-transform: none
 }
 
 button,
@@ -219,7 +220,7 @@ button::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
 [type="submit"]::-moz-focus-inner {
   border-style: none;
-  padding: 0;
+  padding: 0
 }
 
 button,
@@ -230,7 +231,7 @@ textarea {
   font-family: inherit;
   font-size: 100%;
   line-height: 1.15;
-  margin: 0;
+  margin: 0
 }
 
 a.button:hover,
@@ -255,18 +256,18 @@ a.button.ghost-dark-flex {
   font-size: 16px;
   line-height: 24px;
   font-weight: 700;
-  font-family: bmwTypeNextWeb, Arial, Helvetica, Roboto, sans-serif;
+  font-family: var(--fixed-font-family);
   text-align: center;
   padding: 4px 24px;
 }
 
-.button-fixed-width {
+a.button.ghost-dark.button-fixed-width {
   width: auto;
   min-width: auto;
-  white-space: normal !important;
+  white-space: normal;
 }
 
-.button-flex-width {
+a.button.ghost-dark-flex.button-flex-width {
   max-width: 75vw;
   width: auto;
 }
@@ -279,12 +280,12 @@ a.button.ghost-dark-flex:hover {
 
 a.button.hyperlink {
   background: transparent;
-  padding: 0 !important;
+  padding: 0;
   font-size: 16px;
   line-height: 24px;
   color: rgb(38 38 38 / 100%);
   font-weight: 700;
-  font-family: bmwTypeNextWeb, Arial, Helvetica, Roboto, sans-serif;
+  font-family: var(--fixed-font-family);
 }
 
 .align-icon {
@@ -292,27 +293,35 @@ a.button.hyperlink {
   padding: 10px;
 }
 
-.align-icon:hover {
-  color: var(--link-hover-color) !important;
+.button-container:hover,
+a.button.hyperlink:hover {
+  color: var(--link-hover-color);
   font-weight: bold;
 }
 
-.button-text {
-  word-break: break-all;
-}
-
-.icon-gt {
+.icon-gt::after {
   font-size: 24px;
   font-weight: 500;
+  word-wrap: normal;
+  font-feature-settings: "liga";
+  content: attr(data-icon);
+  direction: ltr;
+  display: block;
+  font-family: bmw_next_icons;
+  font-style: normal;
+  height: 1em;
+  line-height: 1;
+  outline: 1px solid transparent;
+  text-align: left;
+  text-rendering: optimizeLegibility;
+  text-transform: none;
+  white-space: nowrap;
+  width: auto;
 }
 
 .align-icon > .align-center {
   align-self: center;
-  margin: 5px 0 0 5px;
-}
-
-.button-container.align-icon:hover {
-  color: var(--link-hover-color) !important;
+  margin: 3px 0 0 3px;
 }
 
 main img {
@@ -339,37 +348,29 @@ main .section {
 }
 
 /* tablet */
-@media (width >= 768px) {
+@media (width >=768px) {
   main .section {
     padding: 20px var(--section-tablet-padding);
   }
 }
 
 /* desktop */
-@media (width >= 1280px) {
+@media (width >=1280px) {
   main .section {
     padding: 20px var(--section-desktop-padding);
   }
 }
 
 /* large-desktop */
-@media (width >= 1920px) {
+@media (width >=1920px) {
   main .section {
     max-width: 100vw;
-    padding-left: calc(
-      (
-          100vw -
-            (var(--max-component-width) - (var(--section-desktop-padding) * 2))
-        ) / 2
-    );
-    padding-right: calc(
-      (
-          100vw -
-            (var(--max-component-width) - (var(--section-desktop-padding) * 2))
-        ) / 2
-    );
+    padding-left: calc((100vw - (var(--max-component-width) - (var(--section-desktop-padding) * 2)))/2);
+    padding-right: calc((100vw - (var(--max-component-width) - (var(--section-desktop-padding) * 2)))/2);
   }
 }
+
+
 
 /* section metadata */
 main .section.light,
@@ -378,7 +379,7 @@ main .section.highlight {
 }
 
 fieldset {
-  padding: 0.35em 0.75em 0.625em;
+  padding: .35em .75em .625em
 }
 
 legend {
@@ -391,27 +392,27 @@ legend {
 }
 
 progress {
-  vertical-align: baseline;
+  vertical-align: baseline
 }
 
 textarea {
-  overflow: auto;
+  overflow: auto
 }
 
 [type="checkbox"],
 [type="radio"] {
   box-sizing: border-box;
-  padding: 0;
+  padding: 0
 }
 
 [type="number"]::-webkit-inner-spin-button,
 [type="number"]::-webkit-outer-spin-button {
-  height: auto;
+  height: auto
 }
 
 [type="search"] {
   -webkit-appearance: textfield;
-  outline-offset: -2px;
+  outline-offset: -2px
 }
 
 [type="search"]::-webkit-search-decoration {
@@ -420,9 +421,9 @@ textarea {
 
 ::-webkit-file-upload-button {
   -webkit-appearance: button;
-  font: inherit;
+  font: inherit
 }
 
 [hidden] {
-  display: none;
+  display: none
 }
