--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -56,6 +56,7 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
 
 @media (width >= 360px) and (width < 768px) {
   header nav { 
+    height: 69px;
     display: block;
   }
 
@@ -68,16 +69,22 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
     position: absolute;
     width: 100%;
     left: 0%;
-    border-top: 1px solid var(--light-border-color);
+    border-top: 1px solid var(--light-bbb);
     content: " ";
-    top: -15px;
+    top: -30px;
+  }
 
+  header nav[aria-expanded="true"] .nav-hamburger-icon {
+    height: 22px;
+    position: absolute;
+    top: -5px;
+    right: -4px;
   }
 
   header nav[aria-expanded="false"] .nav-hamburger button {
     position: absolute;
     right: 1.5rem;
-    top: 30px;
+    top: 25px;
   }
 
   header nav[aria-expanded="true"] .icon-location {
@@ -100,7 +107,7 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
 
   header nav[aria-expanded="false"] .logo-wrapper {
     position: absolute;
-    top: 25px;
+    top: 20px;
     left: 22px;
   }
 
@@ -112,13 +119,18 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
     display: block;
     position: relative;
     top: 100px;
-    padding: .55rem 2rem;
+    padding: .55rem 3.5rem;
+  }
+
+  header nav[aria-expanded="true"] .menu-link-wrapper a{
+   color: var(--light-border-color);
+   text-decoration: none;
   }
 
   header nav[aria-expanded="true"] .logo-wrapper {
-    position: absolute;
-    top: 25px;
-    left: 22px;
+      position: absolute;
+      top: 20px;
+      left: 22px;
     }
 
   header nav .nav-brand img {
@@ -207,7 +219,7 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
 
    header nav .icon-link-list-container .icon-container .search {
     position: absolute;
-    top: 33px;
+    top: 27px;
     right: 70px;
    }
 
@@ -266,7 +278,7 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
     position: absolute;
     width: 106%;
     left: -5%;
-    border-top: 1px solid var(--light-border-color);
+    border-top: 1px solid var(--light-bbb);
     content: " ";
     top: -22px;
   }
@@ -278,6 +290,10 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
     left: 22px;
   }
   
+  header nav[aria-expanded="false"] {
+    height: 95px;
+  }
+
   header nav[aria-expanded="true"] {
     min-height: 100vh;
     align-items: baseline;
@@ -320,7 +336,7 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
   header nav[aria-expanded="true"] .menu-link-wrapper {
     display: block;
     position: relative;
-    top: 130px;
+    top: 120px;
     padding: .55rem 7rem;
   }
 
@@ -654,11 +670,18 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
   }
 
   header.header-wrapper nav .nav-brand .icon-link-list-wrapper .icon-link-list-container .icon {
-    margin-right: 20px;
+    margin-right: 19px;
     display: inline-flex;
     justify-content: center;
     align-items: center;
   }
+  
+  header.header-wrapper nav .nav-brand .icon-link-list-wrapper .icon-link-list-container .icon .search {
+   position: relative;
+   left: 5px;
+  }
+
+
 }
 
 header nav p {
@@ -829,6 +852,8 @@ header nav .sections ul  {
  
   header nav .logo-wrapper{
     margin-right: 24px;
+    position: relative;
+    top:0.5px;
   }
   
   
@@ -899,5 +924,3 @@ header nav .sections ul  {
     left: calc(100vw - (var(--max-component-width) - (45px + 96px)));
   }
 }
-
-
