--- a/blocks/iFrame/iFrame.css
+++ b/blocks/iFrame/iFrame.css
@@ -1,9 +1,9 @@
-main .section.bmw-iframe-container {
+main .section.iframe-container {
   padding-left: 0;
   padding-right: 0;
 }
 
-main .bmw-iframe-container > div {
+main .iframe-container > div {
   max-width: unset;
   
 }
