footer bug fixes

--- a/blocks/copyright/copyright.css
+++ b/blocks/copyright/copyright.css
@@ -16,6 +16,7 @@
     align-items: center;
     gap: 5px;
     width: 100%;
+    padding: 0 0.5rem;
 }
 
 .copyright-wrapper .copyright .copy-right-content::before{
@@ -26,4 +27,19 @@
     content: "©";
     font-size: .75rem;
     font-weight: 300;
+}
+
+/* tablet */
+@media (width >= 768px) {
+    .copyright-wrapper .copyright .copy-right-content {
+        padding: 0 0.75rem;
+    }    
+}
+
+/* desktop */
+@media (width >= 1280px) {
+    .copyright-wrapper .copyright .copy-right-content {
+        padding: 0 0.75rem;
+        padding-left: 0;
+    }    
 }
