--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -473,7 +473,13 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
     border-bottom: 1.5px solid var(--light-bbb);
     padding: 0;
   }
-
+  
+  header nav .menu-link-container {
+    position: relative;
+    width: 100%;
+    justify-content: baseline;
+  }
+  
   header nav[aria-expanded="true"] {
     min-height: 0;
     overflow: visible;
@@ -540,10 +546,14 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
     font-family: bmwTypeNextWeb,Arial,Helvetica,Roboto,sans-serif;
     font-size: 16px;
     display: block;
-    left: 100px;
+    left: 0;
   }
 
-  header.white-background .subnavigation-text-wrapper b{
+  header.white-background .subnavigation-text-wrapper p {
+    margin: 0;
+  }
+
+  header.white-background .subnavigation-text-wrapper strong{
     font-weight: 700;
     
   }
@@ -665,7 +675,7 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
    
   header.header-wrapper nav .nav-brand .icon-link-list-wrapper {
     position: absolute;
-    right: 96px;
+    right: 0;
     top: 30px;
   }
 
@@ -806,7 +816,6 @@ header nav[aria-expanded="true"] .section {
 
   header nav .menu-link-container {
     display: flex;
-    justify-content: center;
     align-items: center;
   }
  
