--- a/styles/styles.css
+++ b/styles/styles.css
@@ -253,7 +253,7 @@ a.button.hyperlink {
   padding: 10px;
 }
 
-.button-container.align-icon:hover,
+.button-container > .align-icon:hover,
 a.button.hyperlink:hover {
   color: var(--link-hover-color);
   font-weight: bold;
@@ -284,9 +284,41 @@ a.button.hyperlink:hover {
   margin: 3px 0 0 3px;
 }
 
-.button-align-center {
+.section.alignment-right > div.default-content-wrapper > .button-container.button-align-center,
+.columns-wrapper > .columns > p.button-container.button-align-center > em.align-icon
+ {
   display: flex;
   justify-content: center;
+};
+
+.section.alignment-right > div.default-content-wrapper > .button-container.button-align-right,
+.section.alignment-right > div.default-content-wrapper > p.button-container.button-align-right > em.align-icon 
+.columns-wrapper > .columns > p.button-container.button-align-center > em.align-icon
+{
+  display: flex;
+  justify-content: center;
+}
+
+.section.alignment-right > div.default-content-wrapper > .button-container.button-align-left,
+.columns-wrapper > .columns > p.button-container.button-align-center > em.align-icon,
+#hyperlink-button {
+  display: flex;
+  justify-content: center;
+}
+
+.section.alignment-right > div.default-content-wrapper,
+.columns-wrapper > .columns > .button-container.button-align-right {
+  text-align: right;
+}
+
+.section.alignment-center > div.default-content-wrapper,
+.columns-wrapper > .columns > .button-container.button-align-center {
+  text-align: center;
+}
+
+.section.alignment-left > div.default-content-wrapper,
+.columns-wrapper > .columns > .button-container.button-align-left {
+  text-align: left;
 }
 
 main img {
