--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -115,14 +115,18 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
     display: none;
   }
 
-  header nav[aria-expanded="true"] .menu-link-wrapper {
+  header nav[aria-expanded="true"] .menu-link-wrapper,
+  header nav[aria-expanded="true"] .menu-flyout-wrapper
+  {
     display: block;
     position: relative;
     top: 100px;
     padding: .55rem 3.5rem;
+    font-weight: 700;
   }
 
-  header nav[aria-expanded="true"] .menu-link-wrapper a{
+  header nav[aria-expanded="true"] .menu-link-wrapper a,  
+  header nav[aria-expanded="true"] .menu-flyout-wrapper{
    color: var(--light-border-color);
    text-decoration: none;
   }
@@ -329,15 +333,18 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
     line-height: 24px;
   }
 
-  header nav[aria-expanded="false"] .menu-link-wrapper {
+  header nav[aria-expanded="false"] .menu-link-wrapper{
     display: none;
   }
   
-  header nav[aria-expanded="true"] .menu-link-wrapper {
+  header nav[aria-expanded="true"] .menu-link-wrapper,
+  header nav[aria-expanded="true"] .menu-flyout-wrapper {
     display: block;
     position: relative;
     top: 120px;
     padding: .55rem 7rem;
+    font-weight: 700;
+    color: var(--light-border-color);
   }
 
   header nav[aria-expanded="true"] .menu-link-wrapper a {
@@ -525,7 +532,8 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
     background-color: transparent;
   }
 
-  header.white-background nav .section .menu-link-wrapper a {
+  header.white-background nav .section .menu-link-wrapper a,
+  header.white-background nav .section .menu-flyout-wrapper span{
   color: var( --background-color);
   }
 
@@ -681,6 +689,20 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
    left: 5px;
   }
 
+  /* css for flyout*/
+  .menu-teaser-container {
+   background-color: white;
+   position: absolute;
+   left: 0;
+   right: 0;
+   top: 80px;
+   display: none;
+  }
+  
+  .menu-flyout-wrapper.showfly .menu-teaser-container {
+    display: block;
+  }
+
 }
 
 header nav .nav-hamburger button {
@@ -817,7 +839,8 @@ header nav[aria-expanded="true"] .section {
   }
   
   
-  header nav .menu-link-wrapper .menu-link a {
+  header nav .menu-link-wrapper .menu-link a,
+  header nav .menu-flyout-wrapper .menu-flyout-link {
     padding: 27px 0;
     text-decoration: none;
     margin: 0 12px;
@@ -829,7 +852,8 @@ header nav[aria-expanded="true"] .section {
     cursor: pointer;
   }
 
-  header nav .menu-link-wrapper .menu-link  a:hover {
+  header nav .menu-link-wrapper .menu-link  a:hover,
+  header nav .menu-flyout-wrapper .menu-flyout-link:hover {
     border-bottom: .25rem solid var(--light-link-hover-color);
     color: var( --light-text-color);
   }
