--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -556,10 +556,6 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
     
   }
 
-  header.white-background .subnavigation-text-wrapper span{
-    font-weight: 200;
-  }
-  
   header.white-background nav {
     border-bottom: 1.5px solid var(--background-color)
   }
@@ -689,9 +685,10 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
    left: 5px;
   }
 
-  /* css for flyout*/
+  /* css for flyout */
+
   .menu-teaser-container {
-   background-color: white;
+   background-color: var(--background-color);
    position: absolute;
    left: 0;
    right: 0;
