--- a/styles/styles.css
+++ b/styles/styles.css
@@ -209,16 +209,17 @@ button:disabled, button:disabled:hover {
 a.button.ghost-dark,
 a.button.ghost-dark-flex {
   background-color: transparent;
-  border: 1px solid var(--text-color);
-  color: var(--text-color);
+  border: 1px solid var(--light-text-color);
+  color: var(--light-text-color);
   font-size: 16px;
-  line-height: 24px;
+  line-height: 20px;
   font-weight: 700;
   font-family: var(--fixed-font-family);
   text-align: center;
   padding: 4px 24px;
   min-height: 3.25rem;
   align-content: center;
+  text-rendering: optimizespeed;
 }
 
 a.button.ghost-dark.button-fixed-width {
@@ -253,10 +254,11 @@ a.button.hyperlink {
   padding: 10px;
 }
 
-.button-container > .align-icon:hover,
-a.button.hyperlink:hover {
+a.button.hyperlink:hover,
+.align-icon-hover{
   color: var(--link-hover-color);
   font-weight: bold;
+  cursor: pointer;
 }
 
 .icon-gt::after {
@@ -305,21 +307,6 @@ a.button.hyperlink:hover {
 }
 
 .section.alignment-right > div.default-content-wrapper > p {
-  text-align: right;
-}
-
-.section.alignment-center > .columns-wrapper > .columns > div > div > p,
-.section.alignment-center > .columns-wrapper > .columns > .button-container.button-align-center {
-  text-align: center;
-}
-
-.section.alignment-left > .columns-wrapper > .columns > div > div > p,
-.section.alignment-left > .columns-wrapper > .columns > .button-container.button-align-left {
-  text-align: left;
-}
-
-.section.alignment-right > .columns-wrapper > .columns > div > div > p,
-.section.alignment-right > .columns-wrapper > .columns > .button-container.button-align-right {
   text-align: right;
 }
 
