--- a/blocks/menu-flyout/menu-flyout.css
+++ b/blocks/menu-flyout/menu-flyout.css
@@ -1,1 +1,13 @@
 /* menu-flyout css */
+
+header.header-wrapper .nav-brand .menu-flyout-wrapper .link-list-wrapper.vertical .link-list-title {
+    padding-right: 0;
+    margin: 0 0 1rem;
+    color: var(--medium-text-color);
+    font-size: 0.625rem;
+    font-weight: 300;
+    line-height: 0.75rem;
+    letter-spacing: 0.125rem;
+    word-break: break-all;
+    text-transform: uppercase;
+}
