--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -697,7 +697,7 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
 
   /* css for flyout */
 
-  .menu-teaser-container,.flyout-menu-teaser {
+  .flyout-main-container {
    background-color: var(--background-color);
    position: absolute;
    left: 0;
@@ -706,8 +706,10 @@ header.white-background .nav-wrapper .logo-wrapper .grey-image {
    display: none;
   }
   
-  .menu-flyout-wrapper.showfly .menu-teaser-container,.menu-flyout-wrapper.showfly .flyout-menu-teaser {
-    display: block;
+  .showfly .flyout-main-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
 }
