added desktop design for flyout

--- a/blocks/menu-flyout/menu-flyout.css
+++ b/blocks/menu-flyout/menu-flyout.css
@@ -1,5 +1,77 @@
 /* menu-flyout css */
 
+header.header-wrapper .nav-brand .menu-flyout-wrapper .menu-flyout .flyout-main-container {
+    padding-bottom: 2rem;
+    padding-top: 2.5rem;
+}
+
+header.header-wrapper .nav-brand .menu-flyout-wrapper .menu-flyout .flyout-main-container .flyout-link-list.flyout-menu-teaser{
+    order: 1;
+    margin-left: 25%;
+    display: block;
+    width: 50%;
+    margin-right: 0;
+    padding: 0px 0.75rem;
+}
+header.header-wrapper .nav-brand .menu-flyout-wrapper .menu-flyout .flyout-main-container .flyout-menu-teaser{
+    order: 2;
+    margin-right: 25%;
+    margin-left: 0;
+    display: block;
+    width: 50%;
+    padding: 0px 0.75rem;
+}
+
+header.header-wrapper .nav-brand .menu-flyout-wrapper .menu-flyout .flyout-main-container .flyout-menu-teaser .menu-teaser__image {
+    margin-bottom: 0.75rem;
+}
+
+header.header-wrapper .nav-brand .menu-flyout-wrapper .menu-flyout .flyout-main-container .flyout-menu-teaser .menu-teaser__image picture,
+header.header-wrapper .nav-brand .menu-flyout-wrapper .menu-flyout .flyout-main-container .flyout-menu-teaser .menu-teaser__image img {
+    width: 100%;
+    height: 165px;
+    object-fit: cover;
+    vertical-align: middle;
+}
+
+header.header-wrapper .nav-brand .menu-flyout-wrapper .menu-flyout .flyout-main-container .flyout-menu-teaser .copy-Text{
+    font-size: 1rem;
+    font-weight: 300;
+    line-height: 1.5rem;
+    font-family: bmwTypeNextWeb, Arial, Helvetica, Roboto, sans-serif;
+}
+
+header.header-wrapper .nav-brand .menu-flyout-wrapper .menu-flyout .flyout-main-container .flyout-menu-teaser .link-label a {
+    align-items: center;
+    display: inline-flex;
+}
+header.header-wrapper .nav-brand .menu-flyout-wrapper .menu-flyout .flyout-main-container .flyout-menu-teaser .link-label a:hover,
+header.header-wrapper .nav-brand .menu-flyout-wrapper .link-list-wrapper.vertical .link-list-detail li a:hover  {
+    text-decoration: none;
+    color: var(--link-hover-color);
+}
+
+header.header-wrapper .nav-brand .menu-flyout-wrapper .menu-flyout .flyout-main-container .flyout-menu-teaser .link-label a::after{
+        overflow-wrap: normal;
+        font-size: 1.25rem;
+        font-weight: 400;
+        -webkit-font-smoothing: antialiased;
+        font-feature-settings: "liga";
+        content: "arrow_chevron_right";
+        direction: ltr;
+        display: block;
+        font-family: "bmw_next_icons",arial,helvetica,roboto,sans-serif;
+        font-style: normal;
+        height: 1em;
+        line-height: 1;
+        text-align: left;
+        text-rendering: optimizelegibility;
+        text-transform: none;
+        width: auto;
+        outline: transparent solid 1px;
+        white-space: nowrap;
+}
+
 header.header-wrapper .nav-brand .menu-flyout-wrapper .link-list-wrapper.vertical .link-list-title {
     padding-right: 0;
     margin: 0 0 1rem;
@@ -10,4 +82,45 @@ header.header-wrapper .nav-brand .menu-flyout-wrapper .link-list-wrapper.vertica
     letter-spacing: 0.125rem;
     word-break: break-all;
     text-transform: uppercase;
+}
+header.header-wrapper .nav-brand .menu-flyout-wrapper .link-list-wrapper.vertical .link-list-detail{
+    list-style-type: none;
+}
+header.header-wrapper .nav-brand .menu-flyout-wrapper .link-list-wrapper.vertical li {
+    margin-bottom: 0.75rem;
+    display: flex;
+}
+header.header-wrapper .nav-brand .menu-flyout-wrapper .link-list-wrapper.vertical .link-list-detail li a{
+    font-family: var(--fixed-font-family);
+    font-size: 0.875rem;
+    color: var(--medium-text-color);
+    line-height: 1.25rem;
+    font-weight: 700;
+    word-break: break-all;
+    text-decoration: none;
+    align-items: center;
+    display: inline-flex;
+}
+header.header-wrapper .nav-brand .menu-flyout-wrapper .link-list-wrapper.vertical .link-list-detail li:not(:first-child) a::after {
+    overflow-wrap: normal;
+    -webkit-font-smoothing: antialiased;
+    font-feature-settings: "liga";
+    content: "arrow_up_right";
+    direction: ltr;
+    display: block;
+    font-family: bmw_next_icons;
+    font-size: 1.25rem;
+    font-style: normal;
+    font-weight: 400;
+    height: 1em;
+    line-height: 1;
+    text-align: left;
+    text-rendering: optimizelegibility;
+    text-transform: none;
+    width: auto;
+    outline: transparent solid 1px;
+    white-space: nowrap;
+}
+.flyout-menu-teaser p {
+    margin: 0;
 }
