--- a/styles/styles.css
+++ b/styles/styles.css
@@ -210,12 +210,12 @@ a.button.ghost-dark {
   background-color: transparent;
   border: 1px solid var(--light-text-color);
   color: var(--light-text-color);
-  font-size: 16px;
-  line-height: 20px;
+  font-size: 1rem;
+  line-height: 1.25rem;
   font-weight: 700;
   font-family: var(--fixed-font-family);
   text-align: center;
-  padding: 4px;
+  padding: .25rem;
   min-height: 3.334rem;
   align-content: center;
   text-rendering: optimizespeed;
@@ -241,8 +241,8 @@ a.button.ghost-dark-flex:hover {
 a.button.hyperlink {
   background: transparent;
   padding: 0;
-  font-size: 16px;
-  line-height: 24px;
+  font-size: 1rem;
+  line-height: 1.25rem;
   color: rgb(38 38 38 / 100%);
   font-weight: 700;
   font-family: var(--fixed-font-family);
@@ -250,7 +250,7 @@ a.button.hyperlink {
 
 .align-icon {
   display: flex;
-  padding: 10px;
+  padding: .625rem;
 }
 
 a.button.hyperlink:hover,
@@ -260,8 +260,8 @@ a.button.hyperlink:hover,
   cursor: pointer;
 }
 
-.icon-gt::after {
-  font-size: 24px;
+.icon-gt::before {
+  font-size: 1.5rem;
   font-weight: 500;
   word-wrap: normal;
   font-feature-settings: "liga";
@@ -278,6 +278,8 @@ a.button.hyperlink:hover,
   text-transform: none;
   white-space: nowrap;
   width: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .align-icon > .align-center {
